[metadata]
name = libtrantor
version = 19.2.1
description = Library to handle whip livex binary data packing/unpacking
author = Evoniners
author_email = dev@evonove.it
url = https://github.com/whip-live/libtrantor
keywords = whip, livex, trantor

[options]
packages = find:
install_requires =
	construct >= 2.8.11

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1
